fix the content overlapping landing screen image frame when content inside frame is taller than browser window

--- a/less/preorder.less
+++ b/less/preorder.less
@@ -961,6 +961,12 @@ body {
     	height: 100vh;
     	padding-top: 96px;
     	padding-bottom: 70px;
+
+    	
+    	display: table;
+    	width: 100%;
+
+
     	.landingWidth {
     		padding: 0 60px;
     		width: 100%;
